Sofr delete и get для /admin/area{id}
